fix(work): cover is visible everywhere

--- a/assets/styles/templates/layouts/_home.scss
+++ b/assets/styles/templates/layouts/_home.scss
@@ -266,6 +266,10 @@
             background-color: var(--color-white);
         }
     }
+
+    .Footer {
+        background-color: var(--color-white);
+    }
 }
 
 body.not-loaded .Home {
