--- a/assets/styles/templates/partials/_footer.scss
+++ b/assets/styles/templates/partials/_footer.scss
@@ -1,5 +1,4 @@
 .Footer {
-    background-color: var(--color-white);
     padding: var(--padding-large);
     height: 100vh;
     transition: color var(--coverSpeed) var(--easing);
